--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
-    "name": "rddj",
-    "version": "1.0.0",
-    "description": "Resources for doing data journalism with R",
-    "author": "Timo Grossenbacher <timo@timogrossenbacher.ch> (https://timogrossenbacher.ch)",
-    "homepage": "http://rddj.info",
-    "keywords": "rstats, rddj, ddj, data journalism, analysis",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/grssnbchr/rddj.git"
-    },
-    "devDependencies": {
-        "apache-server-configs": "^2.7.1",
-        "grunt": "^0.4.5",
-        "grunt-autoprefixer": "^1.0.0",
-        "grunt-concurrent": "^0.5.0",
-        "grunt-contrib-clean": "^0.6.0",
-        "grunt-contrib-concat": "^0.5.0",
-        "grunt-contrib-connect": "^0.8.0",
-        "grunt-contrib-copy": "^0.5.0",
-        "grunt-contrib-cssmin": "^0.10.0",
-        "grunt-contrib-htmlmin": "^0.3.0",
-        "grunt-contrib-imagemin": "^0.8.0",
-        "grunt-contrib-jshint": "^0.10.0",
-        "grunt-contrib-sass": "^0.7.3",
-        "grunt-contrib-uglify": "^0.5.1",
-        "grunt-contrib-watch": "^0.6.1",
-        "grunt-gh-pages": "^0.10.0",
-        "grunt-mocha": "^0.4.10",
-        "grunt-newer": "^0.7.0",
-        "grunt-rev": "^0.1.0",
-        "grunt-svgmin": "^0.4.0",
-        "grunt-usemin": "^2.3.0",
-        "grunt-wiredep": "^1.7.0",
-        "jshint-stylish": "^0.4.0",
-        "load-grunt-tasks": "^0.4.0",
-        "time-grunt": "^0.4.0"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    }
+  "name": "rddj",
+  "version": "1.0.0",
+  "description": "Resources for doing data journalism with R",
+  "author": "Timo Grossenbacher <timo@timogrossenbacher.ch> (https://timogrossenbacher.ch)",
+  "homepage": "http://rddj.info",
+  "keywords": "rstats, rddj, ddj, data journalism, analysis",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grssnbchr/rddj.git"
+  },
+  "devDependencies": {
+    "apache-server-configs": "^2.7.1",
+    "grunt": "^1.0.0",
+    "grunt-autoprefixer": "^3.0.0",
+    "grunt-concurrent": "^2.3.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.0",
+    "grunt-contrib-htmlmin": "^1.4.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-gh-pages": "^1.1.0",
+    "grunt-mocha": "^1.0.0",
+    "grunt-newer": "^1.2.0",
+    "grunt-rev": "^0.1.0",
+    "grunt-svgmin": "^3.2.0",
+    "grunt-usemin": "^3.1.0",
+    "grunt-wiredep": "^3.0.0",
+    "load-grunt-tasks": "^3.5.0",
+    "serve-static": "^1.10.2",
+    "time-grunt": "^1.3.0"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  }
 }
